--- a/contacto.html
+++ b/contacto.html
@@ -3,125 +3,162 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title> Productos </title>
+	<meta name="description" content="Información de contacto de la Panadería y Pastelería el Rincón de Alemania, recetas alemanas y postres alemanes en Buenos Aires, dirección y horarios de la panadería">
+	<meta name="keywords" content="PANADERÍA, DULCES, PANES, POSTRES, RECETAS, INGRESAR, DATOS, DIRECCIÓN, NÚMERO MAIL">
+	<title> Página de contacto de Panadería el Rincón de Alemania </title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="icon" type="image/png" href="pictures\icon.png" sizes="16x16">
 </head>
-<body class="bodyProductos">
-	<!-- header -->
-	<!-- Barra de navegación -->
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-		<div class="container-fluid">
-			<a class="navbar-brand" href="index.html"> <img src="pictures\iconicon-04.png" alt="logo de Panadería El Rincón de Alemania"></a>
-			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="true" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarSupportedContent">
-				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-					<li class="nav-item">
-						<a class="nav-link active" aria-current="page" href="index.html">Home</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="nosotros.html">Nosotros</a>
-					</li>
-					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-							Ir a 
-						</a>
-						<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-							<li><a class="dropdown-item" href="productos.html">Productos</a></li>
-							<li><a class="dropdown-item" href="menu.html">Menú</a></li>
-							<li><hr class="dropdown-divider"></li>
-							<li><a class="dropdown-item" href="contacto.html#redesSociales">Redes Sociales</a></li>
-							<li><a class="dropdown-item" href="contacto.html">Contacto</a></li>
-						</ul>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link active" href="menu.html" tabindex="-1" aria-current="true"> Menú </a>
-					</li>
-				</ul>
-				<form class="d-flex">
-					<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-					<button class="btn btn-outline-secondary dark" type="submit">Search</button>
-				</form>
-			</div>
-		</div>
-	</nav>
-</header>
-<!--Fin de barra de nevegación -->
-<!--Main body -->
-<!--Carrusel de Productos -->
-<main>
-	<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-		<ol class="carousel-indicators">
-			<li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"></li>
-			<li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></li>
-			<li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"></li>
-		</ol>
-		<div class="carousel-inner">
-			<div class="carousel-item active">
-				<img src="pictures\panaleman.png" class="d-block w-100" alt="pan alemán">
-				<div class="carousel-caption d-md-block">
-					<h5 class="imgTitle">Panes</h5>
+
+<body>
+	<header>
+		<!-- Barra de navegación -->
+		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+			<div class="container-fluid">
+				<a class="navbar-brand" href="index.html"> <img src="pictures\iconicon-04.png" alt="logo de Panadería El Rincón de Alemania"> </a>
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="true" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+						<li class="nav-item">
+							<a class="nav-link active" aria-current="page" href="index.html">Home</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="nosotros.html">Nosotros</a>
+						</li>
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" href="menu.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+								Ir a
+							</a>
+							<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+								<li><a class="dropdown-item" href="productos.html">Productos</a></li>
+								<li><a class="dropdown-item" href="menu.html">Menú</a></li>
+								<li><hr class="dropdown-divider"></li>
+								<li><a class="dropdown-item" href="contacto.html#redesSociales">Redes Sociales</a></li>
+							</ul>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link active" href="menu.html" tabindex="-1" aria-current="true"> Menú </a>
+						</li>
+					</ul>
+					<form class="d-flex">
+						<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+						<button class="btn btn-outline-secondary dark" type="submit">Search</button>
+					</form>
 				</div>
 			</div>
-			<div class="carousel-item">
-				<img src="pictures\cherry.png" class="d-block w-100" alt="pan con trigo">
-				<div class="carousel-caption d-md-block">
-					<h5 class="imgTitle">Tortas</h5>
-				</div>
+		</nav>
+	</header>
+	<!--Fin de barra de nevegación -->
+	<div class="fieldsetOptions">
+		<h1 class="contactoCenter d-flex justify-content-center"> Ingresa tus datos </h1> <br>
+		<div class="row g-3">
+			<div class="col">
+				<label> Nombre </label>
+				<input type="text" class="form-control" placeholder="Nombre" aria-label="Nombre">
 			</div>
-			<div class="carousel-item">
-				<img src="pictures\strudel.png" class="d-block w-100" alt="diferentes panes">
-				<div class="carousel-caption d-md-block">
-					<h5 class="imgTitle">Tartas</h5>
-				</div>
+			<div class="col">
+				<label> Apellido </label>
+				<input type="text" class="form-control" placeholder="Apellido" aria-label="Apellido">
 			</div>
-		</div>
-		<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-bs-slide="prev">
-			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-			<span class="visually-hidden">Previous</span>
-		</a>
-		<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-bs-slide="next">
-			<span class="carousel-control-next-icon" aria-hidden="true"></span>
-			<span class="visually-hidden">Next</span>
-		</a>
-	</div>
-	<!-- Fin del Carrusel de Productos -->
-	<div class="container-fluid">
-		<div class="titlesProducts">
-			<h1 class="d-flex justify-content-center"> Panes </h1>
-		</div>
-		<p class="recetasSection">El pan alemán es muy conocido por su mezcla de harinas, avenas y granos que lo hacen un pan rico en fibra. Existen muchísimas variadades: de centeno, integral, sin corteza, mixto. </p>
-		<p class="recetasSection">En el Rincón de Alemania, te traemos de generación en generación, el tradicional pan alemán. </p> 
-		<div class="d-flex justify-content-center">
-			<img src="pictures\bread.jpg" alt="pan y rebanadas de pan sobre una tabla"> 
 		</div>
 
-		<div class="titlesProducts">
-			<h1 class="d-flex justify-content-center"> Tortas </h1>
-		</div>
-		<p class="recetasSection"> En la Panadería el Rincón de Alemania, queremos acompañarte durante tu día. Por eso, te traemos muchas recetas sencillas que podrás hacer para tus desayunos, meriendas y cenas. ¡Te invitamos a explorar todas las recetas disponibles!</p> 
+		<form class="row g-3">
+			<div class="col-md-6">
+				<label for="inputEmail4" class="form-label">Email</label>
+				<input type="email" class="form-control" id="inputEmail4">
+			</div>
+			<div class="col-md-6">
+				<label for="inputPassword4" class="form-label">Contraseña</label>
+				<input type="password" class="form-control" id="inputPassword4">
+			</div>
+			<div class="col-12">
+				<label for="inputAddress" class="form-label">Dirección</label>
+				<input type="text" class="form-control" id="inputAddress">
+			</div>
+			<div class="col-md-6">
+				<label for="inputCity" class="form-label">Ciudad</label>
+				<input type="text" class="form-control" id="inputCity">
+			</div>
+			<div class="col-md-4">
+				<label for="inputState" class="form-label">Barrio</label>
+				<select id="inputState" class="form-select">
+					<option selected>Almagro</option>
+					<option>Belgrano</option>
+					<option>Caballito</option>
+					<option>Recoleta</option>
+					<option>Palermo</option>
+				</select>
+			</div>
+			<div class="col-md-2">
+				<label for="inputZip" class="form-label">Código Postal</label>
+				<input type="text" class="form-control" id="inputZip">
+			</div>
+			<div class="col-12">
+			</div>
+			<div class="col-12 d-flex justify-content-center">
+				<button type="submit" class="btn btn-dark d-flex justify-content-center">Enviar</button> &nbsp;
+				<button type="submit" class="btn btn-dark d-flex justify-content-center">Recibir Newsletter</button>
+			</div> 
+		</form>
+	</div>
+
+	<div style="padding-top: 150px;">
+		<h2 id="redesSociales" class="mapPosition d-flex justify-content-center"> ¿Dónde Encontrarnos?</h2>
+		<br>
+		<!-- INICIO DE ÍCONOS -->
 		<div class="d-flex justify-content-center"> 
-			<img src="pictures\cakee.jpg" alt=""> 
+			<div class="telephone">
+				<svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-telephone-fill" viewBox="0 0 16 16">
+					<path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/>
+				</svg> 
+			</div>
+			<div class="location">
+				<svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
+					<path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
+				</svg> 
+			</div>
+			<div class="mail">
+				<svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-envelope-fill" viewBox="0 0 16 16">
+					<path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555zM0 4.697v7.104l5.803-3.558L0 4.697zM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757zm3.436-.586L16 11.801V4.697l-5.803 3.546z"/>
+				</svg>
+			</div>
 		</div>
-
-		<div class="titlesProducts">
-			<h1 class="d-flex justify-content-center"> Tartas </h1>
-		</div>
-		<p class="recetasSection"> En la Panadería el Rincón de Alemania, queremos acompañarte durante tu día. Por eso, te traemos muchas recetas sencillas que podrás hacer para tus desayunos, meriendas y cenas. ¡Te invitamos a explorar todas las recetas disponibles!</p> 
+		<!-- FIN DE ÍCONOS --> 
+		<br>
 		<div class="d-flex justify-content-center">
-			<img src="pictures\strawberry.jpg" alt=""> 
+			<img src="pictures\mapa-01.png" alt="mapa ubicación panadería">
+		</div>
+		<br>
+		<div class="d-flex justify-content-center">
+			<div class="card" style="width: 25rem;">
+				<div class="card-header d-flex justify-content-center">
+					<strong> Información de Contacto </strong>
+				</div>
+				<ul class="list-group list-group-flush">
+					<li class="list-group-item"><strong>Nuestro número:</strong> +54 9 11 1234 5678</li>
+					<li class="list-group-item"> <strong>Nuestra dirección:</strong> Caballito 5400</li>
+					<li class="list-group-item"> <strong> Mail:</strong> elrincondealemania@gmail.com </li>
+				</ul>
+			</div>
+		</div>
+		<br>
+		<div class="d-flex justify-content-center">
+			<button type="button" class="btn btn-dark "> <a href="https://twitter.com" target="_blank"> Twitter </a> </button> &nbsp;
+
+			<button type="button" class="btn btn-dark "> <a href="https://instagram.com" target="_blank"> Instagram </a> </button> &nbsp;
+
+			<button type="button" class="btn btn-dark "> <a href="https://youtube.com" target="_blank"> Youtube </a> </button>
 		</div>
 	</div>
-
 	<div class="buttonClass">
 		<div class="d-flex justify-content-center">
-			<a href="index.html">Home </a> 
+			<a href="index.html">Home </a>
 		</div>
 	</div>
-	<!-- footer --> 
+	<br>
 	<!-- footer y barra/footer -->
 	<footer>
 		<ul class="nav justify-content-center bg-dark">
