--- a/nosotros.html
+++ b/nosotros.html
@@ -56,7 +56,7 @@
 	<!-- Main Body -->
 	<div class="tartaImage">
 		<div class="d-flex justify-content-center">
-			<img src="pictures\dulcee.png">
+			<img src="pictures\tarta.png">
 		</div>
 	</div>
 	<div class="d-flex justify-content-center">
