updating index.html icon descriptions

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 				<div class="container">
 					<div class="fact-box">
 						<div class="row">
-							<!-- ÍCONO 1 NOSTROS--> 
+							<!-- ÍCONO 1 NOSOTROS--> 
 							<div class="col-lg col-6 single-fact"> 
 								<div class="d-flex justify-content-center">
 									<a href="nosotros.html" class="newLink">
@@ -129,7 +129,7 @@
 								<div class="d-flex justify-content-center" id="iconContacto">
 									<h2 style="color: black;"> Contacto </h2>
 								</div>
-								<p class="d-flex justify-content-center" style="color:black;" id="parrafoContacto"> Conoce nuestra historia! </p>
+								<p class="d-flex justify-content-center" style="color:black;" id="parrafoContacto"> Contáctanos! </p>
 							</div>
 							<!-- ÍCONO 3 RECETAS --> 
 							<div class="col-lg col-6 single-fact"> 
@@ -157,7 +157,7 @@
 								<div class="d-flex justify-content-center" id="iconProductos">
 									<h2 style="color: black;"> Productos</h2>
 								</div>
-								<p class="d-flex justify-content-center" style="color:black;" id="parrafoProductos"> Conoce nuestra historia! </p>
+								<p class="d-flex justify-content-center" style="color:black;" id="parrafoProductos"> Conoce nuestros productos! </p>
 							</div>
 						</div>
 					</div>
